--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                                 <img src="images/icons/canva-1.svg" alt="Logo Canva" class="logos">
                                 <img src="images/icons/wordpress-icon.svg" alt="Logo Wordpress" class="logos">
                                 <article class="timeline__desc">
-                                    <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
+                                    <p>Dans mon ancienne vie j'ai travaillé avec différents outils. Des logiciels de conception 3D pour l'industrie et l'architecture tels que Solidworks ou Rhinoceros aux logiciels de création graphique, Adobe creative suite, en passant par la mise en page de sites web avec wordpress.</p>
                                 </article>
                             </section>
 
@@ -191,7 +191,7 @@
                             <img src="images/icons/vmware-7.svg" alt="Logo VmWare" class="logos">
                             <img src="images/icons/git-icon.svg" alt="Logo Git" class="logos">
                             <article class="timeline__desc">
-                                <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
+                                <p>Depuis le premier jour du reste de ma vie, j'utilise les technologies web, HTML/CSS/JS. Je travaille sur les distros Linux Debian et Raspberry-Pi OS. J'utilise VMware pour créer des machines virtuelles ainsi que Github pour mes projets.</p>
                             </article>
                         </section>
                         
