Corrected some text and added an highlighted color on important words

--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
                 <article class="item-service__content">
                     <h4 class="item-title">Réseaux</h4>
                     <p>
-                    A partir d'un Raspberry Pi, je me suis fabriqué un miroir intelligent tactile qui me permet d'afficher la date, le temps qu'il fait, les actualités... Je peux aussi jouer ma musique favorite ou afficher des photos de familles. Lorsque je l'éteins, il ressemble à un miroir comme les autres.
+                    A partir d'un Raspberry Pi, je me suis fabriqué un miroir intelligent tactile qui me permet d'afficher la date, le temps qu'il fait, les actualités... Je peux aussi jouer ma musique favorite ou afficher des photos de famille. Lorsque je l'éteins, il ressemble à un miroir comme les autres.
                     </p>
                 </article>
             </div>
@@ -427,7 +427,7 @@
         <div class="row heading-block heading-block--center" data-aos="fade-up">
             <div class="column large-full">
                 <h2 class="section-desc">
-                    Vous avez besoin d'un alternant fiable, motivé avec de fortes compétences transversales?
+                    Vous avez besoin d'un <strong class="strong-color">alternant fiable</strong>, motivé avec de fortes compétences transversales?
                 </h2>
             </div>
         </div> <!-- end heading-block -->
