Finish completing texts

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                                 <h5>Enseignant - anglais professionnel</h5>
                             </div>
                             <article class="timeline__desc">
-                                <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
+                                <p>Ayant formé des designer/ concepteurs junior, je me suis lancé dans l'enseignement. Grâce à un contact et étant bilingue Franco-anglais, j'ai eu l'opportunité d'enseigner l'anglais dans un lycée professionnel. Ce fût une expérience très enrichissante et challengeante, que j'ai excercé avec grand plaisir. </p>
                             </article>
                         </div>
 
@@ -239,7 +239,7 @@
                                 <h5>Assistant ingénieur chef de projet</h5>
                             </div>
                             <article class="timeline__desc">
-                                <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
+                                <p>Lors de mon expérience chez Citynox, j'ai eu l'opportunité de collaborer étroitement avec un ingénieur chef de projet pour concevoir et <a href="https://citynox-facade.com/" class="strong-color">réaliser la façade emblématique du bâtiment Iconic à Nice.</a> Mon rôle consistait à allier design fonctionnel et esthétique tout en respectant les exigences techniques et architecturales. Une expérience enrichissante, mêlant créativité et rigueur.</p>
                             </article>
                         </div>
 
@@ -251,7 +251,7 @@
                                 <h5>Designer - Graphiste - Web designer</h5>
                             </div>
                             <article class="timeline__desc">
-                                <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
+                                <p>En tant que freelance, j'ai accompagné divers clients dans la création de projets sur mesure, alliant design, graphisme et webdesign. <a href="https://www.escapegame-montpellier.fr/" class="strong-color">De l'identité visuelle à la conception de sites web,</a> j'ai développé des solutions créatives et fonctionnelles, adaptées aux besoins spécifiques de chaque projet. Une approche polyvalente, centrée sur l'innovation et la satisfaction client.</p>
                             </article>
                         </div>
 
@@ -263,7 +263,7 @@
                                 <h5>Designer produit</h5>
                             </div>
                             <article class="timeline__desc">
-                                <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
+                                <p>Chez Harmony-DML, j'ai conçu du mobilier de bureau alliant ergonomie, fonctionnalité et esthétisme. Mon rôle impliquait <a href="https://www.harmony-group.fr/mobilier-de-bureau/sieges/cabine-acoustique-komunikube?nav=espace" class="strong-color">la création de designs innovants,</a> adaptés aux tendances du marché et aux besoins des espaces professionnels. Une expérience enrichissante, combinant créativité et exigences techniques pour des environnements de travail inspirants.</p>
                             </article>
                         </div>
 
@@ -275,7 +275,7 @@
                                 <h5>Concepteur Industriel</h5>
                             </div>
                             <article class="timeline__desc">
-                                <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
+                                <p>Chez Sud Inox, j'ai participé à la conception de cuisines professionnelles, en mettant l'accent sur la robustesse, la fonctionnalité et l'hygiène. Mon rôle consistait <a href="https://www.sudinox.fr/cuisine-professionnelle-sur-mesure-2/" class="strong-color">à développer des solutions sur mesure,</a> répondant aux normes strictes du secteur tout en optimisant l'ergonomie des espaces de travail. Une expérience alliant innovation et précision technique.</p>
                             </article>
                         </div>
 
@@ -287,7 +287,7 @@
                                 <h5>Designer industriel - Créateur et gérant Neo Vinci</h5>
                             </div>
                             <article class="timeline__desc">
-                                <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
+                                <p>En tant que créateur et gérant de l'EURL Neo Vinci, j'ai conçu des produits innovants pour des clients prestigieux tels que <a href="https://gkpro.fr/eshop/equipements/holsters/etui-tenue-a-retention/" class="strong-color">GK Pro</a> et <a href="https://www.ancilia.com/acheter-coque-anti-ondes-iphone" class="strong-color">Ancilia</a>. Mon rôle impliquait la gestion complète des projets, de l'idée initiale à la réalisation, en combinant créativité, expertise technique et relation client. Une aventure entrepreneuriale riche en défis et collaborations de renom.</p>
                             </article>
                         </div>
 
@@ -309,7 +309,7 @@
                                 <h5>1ère année Bachelor IT - spécialité Cybersécurité</h5>
                             </div>
                             <article class="timeline__desc">
-                                <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
+                                <p>Actuellement en 1ère année de Bachelor IT à La Plateforme, futur alternant en cybersécurité à travers un programme complet sur trois ans. J'y apprends les bases des systèmes, réseaux, programmation, et sécurité informatique : de l'administration de serveurs (Web, VPN, SIEM) à la virtualisation et au développement (HTML, CSS, PHP, SQL), en passant par l’audit, le pentest et la gestion des risques. Une formation exigeante qui allie théorie et pratique pour maîtriser les défis numériques actuels.</p>
                             </article>
                         </div>
 
@@ -321,7 +321,7 @@
                                 <h5>Développeur Front-end</h5>
                             </div>
                             <article class="timeline__desc">
-                                <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
+                                <p>Chez White Rabbit, je me suis formé en tant qu'intégrateur web, en approfondissant mes compétences en HTML, CSS, JavaScript, Angular et Node.js. Cette formation m'a permis de maîtriser le développement d’interfaces modernes et performantes, tout en consolidant mon expertise en technologies web front-end et back-end.</p>
                             </article>
                         </div>
 
@@ -333,7 +333,7 @@
                                 <h5>Chef de projet multimédia</h5>
                             </div>
                             <article class="timeline__desc">
-                                <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
+                                <p>J'ai suivi une formation Chez Digital Campus en gestion de projets digitaux, axée sur la coordination d'équipes, la stratégie numérique et la gestion des délais et budgets. Cette expérience m'a permis de développer une vision globale des projets web, de leur conception à leur mise en œuvre, en intégrant des compétences en communication et management.</p>
                             </article>
                         </div>
 
@@ -345,7 +345,7 @@
                                 <h5>Design Produit</h5>
                             </div>
                             <article class="timeline__desc">
-                                <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
+                                <p>A Créapole-ESDI, j’ai acquis une expertise en design produit, alliant créativité, innovation et réflexion fonctionnelle. Cette formation m’a permis de développer des compétences en conception, modélisation et gestion de projets, tout en répondant aux exigences techniques et esthétiques du marché.</p>
                             </article>
                         </div>
 
@@ -357,7 +357,7 @@
                                 <h5>Product design</h5>
                             </div>
                             <article class="timeline__desc">
-                                <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
+                                <p>Lors de mes études à l'université RMIT à Melbourne, j'ai perfectionné mes compétences en design produit dans un environnement international et innovant. Cette expérience m'a permis d'explorer de nouvelles approches créatives et de renforcer mes connaissances en conception, prototypage et développement de produits.</p>
                             </article>
                         </div>
 
@@ -381,7 +381,7 @@
                 <h2 class="section-heading section-heading--centerbottom">Compétences</h2>
 
                 <p class="section-desc">
-                    Mon but et ma passion est de faire de votre entreprise un sanctuaire.
+                    Mon but et <strong class="strong-color">ma passion</strong> est de faire de votre entreprise un sanctuaire.
                 </p>
             </article>
         </div> <!-- end heading-block -->
