--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                                 <h5>Enseignant - anglais professionnel</h5>
                             </div>
                             <article class="timeline__desc">
-                                <p>Ayant formé des designer/ concepteurs junior, je me suis lancé dans l'enseignement. Grâce à un contact et étant bilingue Franco-anglais, j'ai eu l'opportunité d'enseigner l'anglais dans un lycée professionnel. Ce fût une expérience très enrichissante et challengeante, que j'ai excercé avec grand plaisir. </p>
+                                <p>Ayant formé des designer/ concepteurs junior, je me suis lancé dans l'enseignement. Grâce à un contact et étant bilingue Franco-anglais, j'ai eu l'opportunité d'enseigner l'anglais dans un lycée professionnel. Ce fût une expérience très enrichissante et challengeante, que j'ai exercé avec grand plaisir.</p>
                             </article>
                         </div>
 
