Change name of portfolio

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Design Portal</title>
-    <meta name="description" content="Découvrez design-portal : la plateforme dédiée aux passionnés de design industriel, graphisme, web design et cybersécurité. Explorez des ressources, tendances et conseils pratiques pour les designers et experts IT.">
+    <title>Cyber-Portal</title>
+    <meta name="description" content="Découvrez cyber-portal : la plateforme dédiée aux passionnés de la cybersécurité. Découvrez mon portfolio - Olivier Portal.">
     <meta name="author" content="Olivier Portal">
 
     <!-- mobile specific metas
