Modified name and link to CV download

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     <a href="mailto:olivierportal09@gmail.com" class="btn btn--stroke full-width">Recrutez moi</a>
                 </div>
                 <div class="column large-half tab-full" data-aos="fade-up">
-                    <a href="https://github.com/olivier-portal/cyber-portal/blob/main/CV%20Olivier%20Portal%202024.pdf" class="btn btn--primary full-width">Télécharger mon CV</a>
+                    <a href="/epitome_1_0_0/CV_Olivier Portal_2024.pdf" class="btn btn--primary full-width">Télécharger mon CV</a>
                 </div>
             </div>
 
