--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     <a href="mailto:olivierportal09@gmail.com" class="btn btn--stroke full-width">Recrutez moi</a>
                 </div>
                 <div class="column large-half tab-full" data-aos="fade-up">
-                    <a href="https://olivier-portal.github.io/cyber-portal/MonCv.pdf" class="btn btn--primary full-width">Télécharger mon CV</a>
+                    <a href="https://olivier-portal.github.io/cyber-portal/CV_Olivier_Portal_2024.pdf" class="btn btn--primary full-width">Télécharger mon CV</a>
                 </div>
             </div>
 
